Fix card box shadow offset
The box shadow previously not centered and kinda ugly

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 hsl(178, 100%, 50%);
+    box-shadow: 0 0 16px 6px hsl(178, 100%, 50%);
 }
 
 .card h3 {
